# misis2024s-21-02-solovev-i-s

./: .build.bat  CMakeLists.txt  README.md  status.md
prj.cw/: CMakeLists.txt  main.cpp
prj.cw/filter/: filter.cpp  filter.hpp
prj.lab/: CMakeLists.txt
prj.lab/lab01/: lab01.cpp  lab01.md
prj.lab/lab02/: CMakeLists.txt  lab02.cpp  lab02.md
prj.lab/lab03/: lab03.cpp  lab03.md
prj.lab/lab04/: CMakeLists.txt  lab04.cpp  lab04.md
prj.lab/lab05/: CMakeLists.txt  lab05.cpp  lab05.md
prj.lab/lab06/: CMakeLists.txt  lab06.cpp  lab06.md
prj.lab/lab07/: CMakeLists.txt  input.json  lab07.cpp  lab07.md
prj.lab/lab08/: CMakeLists.txt  lab08.cpp  lab08.md
prj.lab/lab09/: CMakeLists.txt  lab09.cpp  lab09.md
